--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,7 @@ body,
 #root{
   width:100%;
   background-color: black;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 main{
@@ -15,7 +16,77 @@ main{
 }
 section{
 min-height:100vh;
-border:2px solid white;
 position:relative;
 z-index: 2;
+}
+#section-1
+{
+  --gap:3rem;
+ nav{
+display:flex;
+justify-content: space-between;
+align-items: center;
+padding: 1.5rem 2rem;
+padding-top:3.5rem;
+.nav-elem:nth-child(2){
+  i{color:red;}
+}
+svg{
+   max-width:5rem ;
+  width:100%;
+  height:100%;
+}
+}
+.middle{
+  display:flex;
+  gap:var(--gap);
+  .left,.right{
+    width:50%;
+  }
+  .left{
+    display:flex;
+    align-items:center;
+    justify-content:flex-end ;
+    padding-block: 7rem;
+  }
+  h1{
+    font-size: 5rem;
+    line-height:0.8;
+    text-align: right;
+    color:white ;
+  }
+}
+.bottom{
+  display: flex;
+  gap:var(--gap);
+ .left,.right{
+  width:50%;
+
+ }
+ .right{
+  p{
+    font-weight:300 ;
+    line-height: 1.5;
+  }
+ }
+}
+
+.first-line{
+  width:40rem;
+  background-color: rgba(238, 1, 1, 0.885);
+  height: 1px;
+  position: absolute;
+  transform: rotate(45deg) translate(0, -15rem);
+
+}
+.second-line{
+  width:10rem;
+  background-color: rgba(238, 1, 1, 0.885);
+  height: 1px;
+  position: absolute;
+  transform: rotate(135deg);
+  top:35%;
+  right:27%;
+
+}
 }
