--- a/src/App.css
+++ b/src/App.css
@@ -14,11 +14,28 @@ body,
 main{
   position:relative;
 }
+
 section{
 min-height:100vh;
 position:relative;
 z-index: 2;
 }
+
+#canvas-elem::after{
+  content:"";
+  height: 100%;
+  width: 100%;
+  position:absolute;
+  top:0;
+  left:0;
+  z-index:-1;
+  background-image: url('background-l.png');  
+  background-repeat: no-repeat;
+  background-size: cover;
+  transition:all 0.3s linear;
+}
+
+
 #section-1
 {
   --gap:3rem;
@@ -89,4 +106,95 @@ svg{
   right:27%;
 
 }
+}
+
+#section-2{
+  .titles{
+    display:flex;
+    flex-direction: column;
+    padding-left: 20rem;
+    padding-block:10rem;
+ 
+  .title{
+      display:flex;
+      gap:4rem;
+      opacity: 2;
+      padding-block: 2rem;
+      transition: all 0.3s linear;
+      cursor:pointer;
+      h1{
+        font-size:4.5rem;
+        font-weight: 200;
+        line-height:1;
+        color: white;
+      }
+      small{
+        margin-top:0.6rem;
+        color: white;
+        font-size: 0.5rem;
+      }
+  }
+    .title:hover{
+      opacity: 0.3;
+    }
+   }
+}
+
+main:has(#section-2 .title:hover) #canvas-elem::after{
+  opacity:0;
+}
+.images{
+  position: fixed;
+  height:100%;
+  width:100%;
+  top:0;
+  left:0;
+  img{
+    height:100%;
+    width:100%;
+     object-fit:cover;
+  position:absolute;
+  top:0;
+  left:0;
+  opacity:0;
+  transition: all 0.3s linear;
+  }
+
+
+}
+main:has(#section-2 .title[img-title="tomorrowland"]:hover) .images #tomorrowland{
+  opacity:1;
+  background-color: rgb(4,7,24);
+}
+
+main:has(#section-2 .title[img-title="navy-pier"]:hover) .images #navy-pier{
+  opacity:1;
+  background-color: rgb(4,7,24);
+}
+
+main:has(#section-2 .title[img-title="msi-chicago"]:hover) .images #msi-chicago{
+  opacity:1;
+  background-color: rgb(4,7,24);
+}
+
+main:has(#section-2 .title[img-title="phone"]:hover) .images #phone{
+  opacity:1;
+  background-color: rgb(4,7,24);
+}
+
+
+main:has(#section-2 .title[img-title="kikk"]:hover) .images #kikk{
+  opacity:1;
+  background-color: rgb(1,15,92,0.697);
+}
+
+
+main:has(#section-2 .title[img-title="kennedy"]:hover) .images #kennedy{
+  opacity:1;
+  background-color: rgb(4,7,24);
+}
+
+main:has(#section-2 .title[img-title="opera"]:hover) .images #opera{
+  opacity:1;
+  background-color: rgb(176,4,4);
 }
