--- a/src/App.css
+++ b/src/App.css
@@ -113,7 +113,7 @@ svg{
     display:flex;
     flex-direction: column;
     padding-left: 20rem;
-    padding-block:10rem;
+    margin-block:10rem;
  
   .title{
       display:flex;
